--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-cloudflare": "^2.2.0",
-		"@sveltejs/kit": "^1.11.0",
+		"@sveltejs/kit": "^1.12.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/line-clamp": "^0.4.2",
 		"@typescript-eslint/eslint-plugin": "^5.55.0",
@@ -27,21 +27,24 @@
 		"postcss-scss": "^4.0.6",
 		"prettier": "^2.8.4",
 		"prettier-plugin-svelte": "^2.9.0",
-		"sass": "^1.59.2",
+		"sass": "^1.59.3",
 		"sharp": "^0.31.3",
-		"svelte": "^3.56.0",
+		"svelte": "^3.57.0",
 		"svelte-check": "^3.1.4",
-		"svelte-preprocess": "^5.0.1",
+		"svelte-preprocess": "^5.0.3",
 		"svgo": "^3.0.2",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.5.0",
-		"typescript": "^4.9.5",
-		"vite": "^4.1.4",
+		"typescript": "^5.0.2",
+		"vite": "^4.2.0",
 		"vite-plugin-image-optimizer": "^1.1.2"
 	},
 	"type": "module",
 	"dependencies": {
+		"@xmtp/xmtp-js": "^7.14.0",
 		"surrealdb.js": "^0.5.0",
-		"svelte-local-storage-store": "^0.4.0"
+		"svelte-local-storage-store": "^0.4.0",
+		"svelte-web3": "^4.0.2",
+		"web3modal": "^1.9.12"
 	}
 }
