--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+		"@esbuild-plugins/node-modules-polyfill": "^0.2.2",
 		"@sveltejs/adapter-cloudflare": "^2.2.0",
 		"@sveltejs/kit": "^1.12.0",
 		"@tailwindcss/forms": "^0.5.3",
@@ -42,9 +44,9 @@
 	"type": "module",
 	"dependencies": {
 		"@xmtp/xmtp-js": "^7.14.0",
+		"ethers-svelte": "^3.0.0",
 		"surrealdb.js": "^0.5.0",
 		"svelte-local-storage-store": "^0.4.0",
-		"svelte-web3": "^4.0.2",
 		"web3modal": "^1.9.12"
 	}
 }
