--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@xmtp/xmtp-js": "^7.14.0",
 		"buffer": "^6.0.3",
 		"ethers-svelte": "^3.0.0",
+		"rollup-plugin-node-polyfills": "^0.2.1",
 		"surrealdb.js": "^0.5.0",
 		"svelte-local-storage-store": "^0.4.0",
 		"web3modal": "^1.9.12"
